--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="<%= css %>">
 </head>
 <body>
+  <div id="app"></div>
   <script src="<%= js %>"></script>
 </body>
 </html>
